[gd_scene load_steps=34 format=4 uid="uid://30d1f58fw2q0"]

[ext_resource type="Script" uid="uid://dxo4xyuiv5dco" path="res://level_0.gd" id="1_iqb6k"]
[ext_resource type="Texture2D" uid="uid://bta5bf0ffu8d6" path="res://assets/cute/Tiles/CuteTiles-Recovered.png" id="2_tuk8q"]
[ext_resource type="Texture2D" uid="uid://bk4o7sqgk5ejy" path="res://assets/cute/Tiles/cloud.png" id="3_rclv4"]
[ext_resource type="Texture2D" uid="uid://b6naeara75kim" path="res://assets/cute/Tiles/tree1.png" id="4_vriui"]
[ext_resource type="Texture2D" uid="uid://drj15feo7kjqe" path="res://assets/cute/Tiles/Tiles/ToughTiles.png" id="5_37ubt"]
[ext_resource type="Texture2D" uid="uid://ded7biscaomqh" path="res://assets/tough/tree2.png" id="6_yxper"]
[ext_resource type="Texture2D" uid="uid://qkl1vphdivvm" path="res://assets/tough/Gate.png" id="7_ik8gy"]
[ext_resource type="PackedScene" uid="uid://crhstniodwlvn" path="res://features/player.tscn" id="8_k8q86"]
[ext_resource type="SpriteFrames" uid="uid://d1jmywjd32mfe" path="res://features/player_frames_cute.tres" id="9_ravr1"]
[ext_resource type="Texture2D" uid="uid://68ky6bxmlih1" path="res://assets/natural/Tiles/bottom.png" id="12_hfrus"]
[ext_resource type="Texture2D" uid="uid://c4jbxly7lmofk" path="res://assets/natural/Tiles/center.png" id="13_t0r8f"]
[ext_resource type="Texture2D" uid="uid://d4nywrwdi5tpo" path="res://assets/natural/Tiles/left.png" id="14_g2342"]
[ext_resource type="Texture2D" uid="uid://dfeooej0d3ioy" path="res://assets/natural/Tiles/right.png" id="15_unyjb"]
[ext_resource type="PackedScene" uid="uid://b5k8k8k8k8k8" path="res://objects/background_layer.tscn" id="16_nj2p8"]
[ext_resource type="Texture2D" uid="uid://ck3hakpfrhq2p" path="res://assets/cute/8_20260127001941.png" id="17_xtty0"]
[ext_resource type="Texture2D" uid="uid://wk3n1b2nb1k1" path="res://assets/tough/9_20260127003138.png" id="18_0xwpe"]
[ext_resource type="Texture2D" uid="uid://p3ry3c7htrwx" path="res://assets/natural/placeholder_material.png" id="19_j8mve"]
[ext_resource type="PackedScene" uid="uid://dg4k8k8k8k8k8" path="res://objects/invisible_barrier.tscn" id="20_d37l0"]
[ext_resource type="PackedScene" uid="uid://dv4ym3lg7x8e4" path="res://Project_jam_UI/scenes/HUD.tscn" id="22_fejxq"]
[ext_resource type="PackedScene" path="res://Project_jam_UI/scenes/death_screen.tscn" id="23_ejcpl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mi2et"]
texture = ExtResource("2_tuk8q")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -23.707905, 32, -25.9658, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -24.836853, 32, -25.9658, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -24.836853, 32, -23.707905, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_81hpc"]
texture = ExtResource("3_rclv4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 20.32106, 10.442772, 1.1289482, 2.5401306, -26.530273)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 6.2092133, 16.08751, 18.063164, -7.0559235, 22.01448, -32, 17.498688)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 9.031578, 14.394089, 15.805267, -13.265137, 11.8539505, -32, 9.031578)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 14.676323, 14.394089, 15.805267, -8.749344, 2.8223686, -32, 9.031578)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -20.32106, 16.08751, -14.676323, 7.0559235, 0.5644722, -7.620392, 7.3381577, -32, 13.547371)
5:0/0 = 0
5:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wi5gn"]
texture = ExtResource("4_vriui")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
2:5/0 = 0
1:5/0 = 0
0:5/0 = 0
2:4/0 = 0
1:1/0 = 0
1:2/0 = 0
2:2/0 = 0
2:3/0 = 0
1:4/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
2:1/0 = 0
2:0/0 = 0
1:0/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
3:3/0 = 0
3:4/0 = 0
3:5/0 = 0
3:6/0 = 0
3:7/0 = 0
2:7/0 = 0
1:7/0 = 0
1:6/0 = 0
0:6/0 = 0
2:6/0 = 0
0:7/0 = 0

[sub_resource type="TileSet" id="TileSet_8r63q"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/10 = SubResource("TileSetAtlasSource_mi2et")
sources/12 = SubResource("TileSetAtlasSource_81hpc")
sources/13 = SubResource("TileSetAtlasSource_wi5gn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f5jgr"]
texture = ExtResource("5_37ubt")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -23.143429, 32, -24.836851, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -25.401325, 32, -25.401325, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -24.836853, 32, -23.707905, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hxdut"]
texture = ExtResource("6_yxper")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
1:5/0 = 0
2:5/0 = 0
1:6/0 = 0
2:6/0 = 0
0:5/0 = 0
0:6/0 = 0
3:6/0 = 0
3:5/0 = 0
3:4/0 = 0
3:7/0 = 0
2:7/0 = 0
1:7/0 = 0
0:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n2naj"]
texture = ExtResource("7_ik8gy")
texture_region_size = Vector2i(64, 64)
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:10/0 = 0
9:10/0 = 0
8:10/0 = 0
7:10/0 = 0
6:10/0 = 0
10:9/0 = 0
10:8/0 = 0
5:9/0 = 0
5:10/0 = 0
10:0/0 = 0
10:1/0 = 0
10:2/0 = 0
10:3/0 = 0
10:4/0 = 0
10:5/0 = 0
10:6/0 = 0
10:7/0 = 0

[sub_resource type="TileSet" id="TileSet_qmbyq"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_f5jgr")
sources/2 = SubResource("TileSetAtlasSource_hxdut")
sources/4 = SubResource("TileSetAtlasSource_n2naj")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ewhlb"]
texture = ExtResource("12_hfrus")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mxksj"]
texture = ExtResource("13_t0r8f")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7lhqc"]
texture = ExtResource("14_g2342")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_afdcp"]
texture = ExtResource("15_unyjb")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_b5pna"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ewhlb")
sources/1 = SubResource("TileSetAtlasSource_mxksj")
sources/2 = SubResource("TileSetAtlasSource_7lhqc")
sources/3 = SubResource("TileSetAtlasSource_afdcp")

[node name="Level1" type="Node2D"]
script = ExtResource("1_iqb6k")
initial_mode = 1

[node name="CuteTreeMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAoADQAAAAQAAAAAAAsADQAAAAUAAAAAAAwADQAAAAYAAAAAAA0ADQAAAAcAAAADAAsADQADAAUAAAADAA0ADQADAAcAAAAIAA0ADQAAAAcAAABlAA0ADQADAAcAAAA+AAsADQAAAAUAAAA+AAwADQAAAAYAAABBAAsADQADAAUAAABBAAwADQADAAYAAABBAA0ADQADAAcAAAA=")
tile_set = SubResource("TileSet_8r63q")

[node name="ToughTreeMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AABIAAYAAgAAAAAAAABIAA0AAgAAAAcAAABlAA0AAgADAAcAAAALAA0AAgADAAcAAAAMAAsAAgAAAAUAAAAaAA0AAgADAAcAAAAeAA0AAgADAAcAAAApAAwAAgAAAAYAAAAsAA0AAgADAAcAAAAvAA0AAgAAAAcAAAA1AAsAAgAAAAUAAAA1AAwAAgAAAAYAAAA1AA0AAgAAAAcAAAA4AA0AAgADAAcAAABEAAYAAgADAAAAAABEAAwAAgADAAYAAABEAA0AAgADAAcAAAByAAgABAAFAAQAAAByAAMABAAFAAAAAAAbAAYAAgAAAAAAAAAeAAoAAgADAAQAAAAeAAwAAgADAAYAAAA=")
tile_set = SubResource("TileSet_qmbyq")

[node name="Player" parent="." instance=ExtResource("8_k8q86")]
position = Vector2(-2663, 755)
speed_cute = 250.0
jump_cute = -435.0
speed_tough = 200.0
speed_natural = 300.0
jump_natural = -300.0
frames_natural = ExtResource("9_ravr1")

[node name="NaturalMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAAAAAAAAAAdABAAAAAAAAAAAAAcABAAAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA8AAAAAAAAAAAAbAA8AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA0AAAAAAAAAAAAbABAAAAAAAAAAAAAaAA8AAAAAAAAAAAAZAA8AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA0AAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAYAA4AAAAAAAAAAAAXAA4AAAAAAAAAAAAWAA4AAAAAAAAAAAAVAA4AAAAAAAAAAAAUAA4AAAAAAAAAAAAUAA0AAAAAAAAAAAATAA0AAAAAAAAAAAASAA0AAAAAAAAAAAARAA0AAAAAAAAAAAAQAA0AAAAAAAAAAAAPAA0AAAAAAAAAAAAOAA0AAAAAAAAAAAANAA0AAAAAAAAAAAAMAA0AAAAAAAAAAAAXAA0AAAAAAAAAAAAYAA0AAAAAAAAAAAAWAA0AAAAAAAAAAAAVAA0AAAAAAAAAAAAXAA8AAAAAAAAAAAAYAA8AAAAAAAAAAAAaABAAAAAAAAAAAAAZABAAAAAAAAAAAAAYABAAAAAAAAAAAAAXABAAAAAAAAAAAAAWABAAAAAAAAAAAAAVABAAAAAAAAAAAAAUAA8AAAAAAAAAAAATAA8AAAAAAAAAAAASAA8AAAAAAAAAAAARAA8AAAAAAAAAAAAQAA8AAAAAAAAAAAAPAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAANAA8AAAAAAAAAAAAMAA8AAAAAAAAAAAALAA8AAAAAAAAAAAAKAA8AAAAAAAAAAAAJAA8AAAAAAAAAAAAIAA8AAAAAAAAAAAAHAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAFAA8AAAAAAAAAAAAEAA8AAAAAAAAAAAADAA8AAAAAAAAAAAACAA8AAAAAAAAAAAABAA8AAAAAAAAAAAAAAA8AAAAAAAAAAAAAAA4AAAAAAAAAAAABABAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAABABEAAAAAAAAAAAACABAAAAAAAAAAAAADABAAAAAAAAAAAAAEABAAAAAAAAAAAAAFABAAAAAAAAAAAAAGABAAAAAAAAAAAAAHABAAAAAAAAAAAAAHABEAAAAAAAAAAAAIABEAAAAAAAAAAAAJABEAAAAAAAAAAAAKABEAAAAAAAAAAAALABEAAAAAAAAAAAAMABEAAAAAAAAAAAANABEAAAAAAAAAAAAOABEAAAAAAAAAAAAPABEAAAAAAAAAAAAQABEAAAAAAAAAAAARABEAAAAAAAAAAAASABEAAAAAAAAAAAATABEAAAAAAAAAAAAUABEAAAAAAAAAAAAUABAAAAAAAAAAAAATABAAAAAAAAAAAAASABAAAAAAAAAAAAARABAAAAAAAAAAAAAQABAAAAAAAAAAAAAPABAAAAAAAAAAAAAOABAAAAAAAAAAAAANABAAAAAAAAAAAAAMABAAAAAAAAAAAAALABAAAAAAAAAAAAAKABAAAAAAAAAAAAAJABAAAAAAAAAAAAAIABAAAAAAAAAAAAAFABEAAAAAAAAAAAAEABEAAAAAAAAAAAADABEAAAAAAAAAAAACABEAAAAAAAAAAAAGABEAAAAAAAAAAAAVABEAAAAAAAAAAAAYABEAAAAAAAAAAAAZABEAAAAAAAAAAAAaABEAAAAAAAAAAAAbABEAAAAAAAAAAAAcABEAAAAAAAAAAAAdABEAAAAAAAAAAAAXABEAAAAAAAAAAAAWABEAAAAAAAAAAAAWAA8AAAAAAAAAAAAVAA8AAAAAAAAAAAAOAA4AAAAAAAAAAAANAA4AAAAAAAAAAAAMAA4AAAAAAAAAAAALAA4AAAAAAAAAAAAKAA4AAAAAAAAAAAAJAA4AAAAAAAAAAAAIAA4AAAAAAAAAAAAHAA4AAAAAAAAAAAAGAA4AAAAAAAAAAAAFAA4AAAAAAAAAAAAEAA4AAAAAAAAAAAADAA4AAAAAAAAAAAACAA4AAAAAAAAAAAABAA4AAAAAAAAAAAABAA0AAAAAAAAAAAACAA0AAAAAAAAAAAADAA0AAAAAAAAAAAAEAA0AAAAAAAAAAAAFAA0AAAAAAAAAAAAGAA0AAAAAAAAAAAAHAA0AAAAAAAAAAAAIAA0AAAAAAAAAAAAJAA0AAAAAAAAAAAAKAA0AAAAAAAAAAAALAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAQAA4AAAAAAAAAAAARAA4AAAAAAAAAAAASAA4AAAAAAAAAAAATAA4AAAAAAAAAAAAhAA0AAAAAAAAAAAAhAA4AAAAAAAAAAAAhAA8AAAAAAAAAAAAhABAAAAAAAAAAAAAhABEAAAAAAAAAAAAgABEAAAAAAAAAAAAfABEAAAAAAAAAAAAeABEAAAAAAAAAAAAeABAAAAAAAAAAAAAeAA4AAAAAAAAAAAAfAA4AAAAAAAAAAAAfAA0AAAAAAAAAAAAgAA0AAAAAAAAAAAAgAA4AAAAAAAAAAAAgAA8AAAAAAAAAAAAgABAAAAAAAAAAAAAfABAAAAAAAAAAAAAeAA8AAAAAAAAAAAAeAA0AAAAAAAAAAAAfAA8AAAAAAAAAAAD9/w4AAAAAAAAAAAD9/w8AAAAAAAAAAAD9/xAAAAAAAAAAAAD9/xEAAAAAAAAAAAD+/xEAAAAAAAAAAAD//xEAAAAAAAAAAAD//xAAAAAAAAAAAAD//w8AAAAAAAAAAAD//w4AAAAAAAAAAAD+/w4AAAAAAAAAAAD+/w8AAAAAAAAAAAD+/xAAAAAAAAAAAAD8/w0AAAAAAAAAAAD8/w4AAAAAAAAAAAD8/w8AAAAAAAAAAAD8/xAAAAAAAAAAAAD8/xEAAAAAAAAAAAD7/w0AAAAAAAAAAAD7/w4AAAAAAAAAAAD7/w8AAAAAAAAAAAD7/xAAAAAAAAAAAAD7/xEAAAAAAAAAAAD6/w0AAAAAAAAAAAD6/w4AAAAAAAAAAAD6/w8AAAAAAAAAAAD6/xAAAAAAAAAAAAD6/xEAAAAAAAAAAAAiAA0AAAAAAAAAAAAiAA4AAAAAAAAAAAAiAA8AAAAAAAAAAAAiABAAAAAAAAAAAAAiABEAAAAAAAAAAAAjAA0AAAAAAAAAAAAjAA4AAAAAAAAAAAAjAA8AAAAAAAAAAAAjABAAAAAAAAAAAAAjABEAAAAAAAAAAAAkAA0AAAAAAAAAAAAkAA4AAAAAAAAAAAAkAA8AAAAAAAAAAAAkABAAAAAAAAAAAAAkABEAAAAAAAAAAAAkABIAAAAAAAAAAAAkABMAAAAAAAAAAAAkABQAAAAAAAAAAAAkABUAAAAAAAAAAAAkABYAAAAAAAAAAAAjABYAAAAAAAAAAAAiABYAAAAAAAAAAAAhABYAAAAAAAAAAAAgABYAAAAAAAAAAAAfABYAAAAAAAAAAAAeABYAAAAAAAAAAAAdABYAAAAAAAAAAAAcABYAAAAAAAAAAAAbABYAAAAAAAAAAAAaABYAAAAAAAAAAAAZABYAAAAAAAAAAAAYABYAAAAAAAAAAAAXABYAAAAAAAAAAAAWABYAAAAAAAAAAAAVABYAAAAAAAAAAAAUABYAAAAAAAAAAAATABYAAAAAAAAAAAASABYAAAAAAAAAAAARABYAAAAAAAAAAAAQABYAAAAAAAAAAAAPABYAAAAAAAAAAAAOABYAAAAAAAAAAAANABYAAAAAAAAAAAAMABYAAAAAAAAAAAALABYAAAAAAAAAAAAKABYAAAAAAAAAAAAJABYAAAAAAAAAAAAIABYAAAAAAAAAAAAHABYAAAAAAAAAAAAGABYAAAAAAAAAAAAFABYAAAAAAAAAAAAEABYAAAAAAAAAAAADABYAAAAAAAAAAAACABYAAAAAAAAAAAABABYAAAAAAAAAAAAAABYAAAAAAAAAAAD//xYAAAAAAAAAAAD+/xYAAAAAAAAAAAD+/xUAAAAAAAAAAAD9/xUAAAAAAAAAAAD8/xUAAAAAAAAAAAD7/xUAAAAAAAAAAAD6/xUAAAAAAAAAAAD6/xQAAAAAAAAAAAD6/xYAAAAAAAAAAAD7/xYAAAAAAAAAAAD8/xYAAAAAAAAAAAD9/xYAAAAAAAAAAAD8/xQAAAAAAAAAAAD7/xQAAAAAAAAAAAD7/xMAAAAAAAAAAAD7/xIAAAAAAAAAAAD6/xIAAAAAAAAAAAD6/xMAAAAAAAAAAAD8/xMAAAAAAAAAAAD9/xMAAAAAAAAAAAD9/xIAAAAAAAAAAAD+/xIAAAAAAAAAAAD//xIAAAAAAAAAAAAAABIAAAAAAAAAAAABABIAAAAAAAAAAAACABIAAAAAAAAAAAADABIAAAAAAAAAAAAEABIAAAAAAAAAAAAFABIAAAAAAAAAAAAGABIAAAAAAAAAAAAHABIAAAAAAAAAAAAIABIAAAAAAAAAAAAJABIAAAAAAAAAAAAKABIAAAAAAAAAAAALABIAAAAAAAAAAAAMABIAAAAAAAAAAAANABIAAAAAAAAAAAAOABIAAAAAAAAAAAAPABIAAAAAAAAAAAAQABIAAAAAAAAAAAARABIAAAAAAAAAAAASABIAAAAAAAAAAAATABIAAAAAAAAAAAAUABIAAAAAAAAAAAAVABIAAAAAAAAAAAAWABIAAAAAAAAAAAAXABIAAAAAAAAAAAAYABIAAAAAAAAAAAAZABIAAAAAAAAAAAAaABIAAAAAAAAAAAAaABMAAAAAAAAAAAAbABMAAAAAAAAAAAAcABMAAAAAAAAAAAAcABIAAAAAAAAAAAAdABIAAAAAAAAAAAAeABIAAAAAAAAAAAAfABIAAAAAAAAAAAAgABIAAAAAAAAAAAAhABIAAAAAAAAAAAAiABIAAAAAAAAAAAAjABIAAAAAAAAAAAAjABMAAAAAAAAAAAAjABQAAAAAAAAAAAAjABUAAAAAAAAAAAAfABUAAAAAAAAAAAAeABUAAAAAAAAAAAAdABUAAAAAAAAAAAAcABUAAAAAAAAAAAAbABUAAAAAAAAAAAAUABUAAAAAAAAAAAATABUAAAAAAAAAAAASABUAAAAAAAAAAAARABUAAAAAAAAAAAAQABUAAAAAAAAAAAAPABUAAAAAAAAAAAAOABUAAAAAAAAAAAANABUAAAAAAAAAAAAMABUAAAAAAAAAAAAMABQAAAAAAAAAAAALABQAAAAAAAAAAAAKABQAAAAAAAAAAAAJABQAAAAAAAAAAAAIABQAAAAAAAAAAAAHABQAAAAAAAAAAAAGABQAAAAAAAAAAAAFABQAAAAAAAAAAAAEABQAAAAAAAAAAAADABQAAAAAAAAAAAACABQAAAAAAAAAAAABABQAAAAAAAAAAAAAABQAAAAAAAAAAAD//xQAAAAAAAAAAAD+/xQAAAAAAAAAAAD9/xQAAAAAAAAAAAD8/xIAAAAAAAAAAAD+/xMAAAAAAAAAAAABABMAAAAAAAAAAAACABMAAAAAAAAAAAADABMAAAAAAAAAAAAEABMAAAAAAAAAAAAFABMAAAAAAAAAAAAGABMAAAAAAAAAAAAHABMAAAAAAAAAAAAIABMAAAAAAAAAAAAJABMAAAAAAAAAAAAKABMAAAAAAAAAAAALABMAAAAAAAAAAAAMABMAAAAAAAAAAAANABMAAAAAAAAAAAAOABMAAAAAAAAAAAAPABMAAAAAAAAAAAAQABMAAAAAAAAAAAARABMAAAAAAAAAAAASABMAAAAAAAAAAAATABMAAAAAAAAAAAAUABMAAAAAAAAAAAAVABMAAAAAAAAAAAAWABMAAAAAAAAAAAAXABMAAAAAAAAAAAAYABMAAAAAAAAAAAAYABQAAAAAAAAAAAAZABQAAAAAAAAAAAAaABQAAAAAAAAAAAAbABQAAAAAAAAAAAAcABQAAAAAAAAAAAAdABQAAAAAAAAAAAAeABQAAAAAAAAAAAAfABQAAAAAAAAAAAAgABQAAAAAAAAAAAAhABQAAAAAAAAAAAAiABQAAAAAAAAAAAAiABMAAAAAAAAAAAAiABUAAAAAAAAAAAAhABUAAAAAAAAAAAAgABUAAAAAAAAAAAAhABMAAAAAAAAAAAAgABMAAAAAAAAAAAAfABMAAAAAAAAAAAAeABMAAAAAAAAAAAAdABMAAAAAAAAAAAAZABMAAAAAAAAAAAAbABIAAAAAAAAAAAAXABQAAAAAAAAAAAAWABQAAAAAAAAAAAAVABQAAAAAAAAAAAAUABQAAAAAAAAAAAAWABUAAAAAAAAAAAAXABUAAAAAAAAAAAAYABUAAAAAAAAAAAAZABUAAAAAAAAAAAAVABUAAAAAAAAAAAATABQAAAAAAAAAAAASABQAAAAAAAAAAAAaABUAAAAAAAAAAAARABQAAAAAAAAAAAAQABQAAAAAAAAAAAAPABQAAAAAAAAAAAAOABQAAAAAAAAAAAANABQAAAAAAAAAAAAKABUAAAAAAAAAAAALABUAAAAAAAAAAAAJABUAAAAAAAAAAAAIABUAAAAAAAAAAAAHABUAAAAAAAAAAAAGABUAAAAAAAAAAAD//xUAAAAAAAAAAAAAABUAAAAAAAAAAAABABUAAAAAAAAAAAACABUAAAAAAAAAAAADABUAAAAAAAAAAAAEABUAAAAAAAAAAAAFABUAAAAAAAAAAAAAABMAAAAAAAAAAAD//xMAAAAAAAAAAAAAAA0AAAAAAAAAAAD//w0AAAAAAAAAAAD+/w0AAAAAAAAAAAD9/w0AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_b5pna")

[node name="CuteMap" type="TileMapLayer" parent="."]
position = Vector2(-3, 0)
tile_map_data = PackedByteArray("AAAgAAwADQAAAAUAAAAPAAwADQAAAAYAAAAUAAwADQAAAAYAAADp/w0ACgACAAIAAADo/w0ACgAAAAIAAADn/w0ACgAAAAIAAADm/w0ACgAAAAIAAADl/w0ACgAAAAIAAADk/w0ACgAAAAIAAADj/w0ACgAAAAIAAADi/w0ACgAAAAIAAADh/w0ACgAAAAIAAADg/w0ACgAAAAIAAADf/w0ACgAAAAIAAADe/w0ACgAAAAIAAADd/w0ACgAAAAIAAADc/w0ACgAAAAIAAADb/w0ACgAAAAIAAADa/w0ACgAAAAIAAADZ/w0ACgAAAAIAAADY/w0ACgAAAAIAAADX/w0ACgAAAAIAAADW/w0ACgAAAAIAAADV/w0ACgAAAAIAAADU/w0ACgAAAAIAAADS/w0ACgAAAAIAAADT/w0ACgAAAAIAAADQ/w0ACgAAAAIAAADR/w0ACgAAAAIAAADP/w0ACgAAAAIAAADO/w0ACgAAAAIAAADN/w0ACgAAAAIAAADM/w0ACgAAAAIAAADL/w0ACgAAAAIAAADK/w0ACgAAAAIAAADJ/w0ACgAAAAIAAADF/w0ACgABAAEAAADG/w0ACgAAAAIAAADH/w0ACgAAAAIAAADI/w0ACgAAAAIAAADF/w4ACgAAAAEAAADF/w8ACgAAAAEAAADF/xAACgAAAAEAAADG/w4ACgACAAEAAADH/w4ACgACAAEAAADI/w4ACgACAAEAAADJ/w4ACgACAAEAAADK/w4ACgACAAEAAADL/w4ACgACAAEAAADM/w8ACgACAAEAAADN/w8ACgACAAEAAADO/w8ACgACAAEAAADP/w8ACgACAAEAAADQ/w8ACgACAAEAAADR/w8ACgACAAEAAADS/w8ACgACAAEAAADT/w8ACgACAAEAAADT/xAACgACAAEAAADU/xAACgACAAEAAADV/xAACgACAAEAAADW/xAACgACAAEAAADX/xAACgACAAEAAADY/xAACgACAAEAAADZ/xAACgACAAEAAADa/xAACgACAAEAAADa/xEACgACAAEAAADb/xEACgACAAEAAADc/xEACgACAAEAAADd/xEACgACAAEAAADe/xEACgACAAEAAADp/w4ACgABAAIAAADo/w4ACgACAAEAAADn/w4ACgACAAEAAADm/w4ACgACAAEAAADm/w8ACgACAAEAAADl/w8ACgACAAEAAADk/w8ACgACAAEAAADj/w8ACgACAAEAAADi/w8ACgACAAEAAADh/w8ACgACAAEAAADg/w8ACgACAAEAAADf/w8ACgACAAEAAADe/w8ACgACAAEAAADd/w8ACgACAAEAAADc/w8ACgACAAEAAADb/w8ACgACAAEAAADa/w8ACgACAAEAAADZ/w8ACgACAAEAAADY/w8ACgACAAEAAADX/w8ACgACAAEAAADW/w4ACgACAAEAAADV/w4ACgACAAEAAADU/w4ACgACAAEAAADT/w4ACgACAAEAAADS/w4ACgACAAEAAADR/w4ACgACAAEAAADQ/w4ACgACAAEAAADP/w4ACgACAAEAAADO/w4ACgACAAEAAADN/w4ACgACAAEAAADM/w4ACgACAAEAAADU/w8ACgACAAEAAADV/w8ACgACAAEAAADW/w8ACgACAAEAAADY/w4ACgACAAEAAADZ/w4ACgACAAEAAADa/w4ACgACAAEAAADb/w4ACgACAAEAAADc/w4ACgACAAEAAADd/w4ACgACAAEAAADe/w4ACgACAAEAAADf/w4ACgACAAEAAADg/w4ACgACAAEAAADh/w4ACgACAAEAAADi/w4ACgACAAEAAADj/w4ACgACAAEAAADk/w4ACgACAAEAAADl/w4ACgACAAEAAADX/w4ACgACAAEAAADL/w8ACgACAAEAAADK/w8ACgACAAEAAADJ/w8ACgACAAEAAADI/w8ACgACAAEAAADH/w8ACgACAAEAAADG/w8ACgACAAEAAADG/xAACgACAAEAAADI/xAACgACAAEAAADH/xAACgACAAEAAADK/xAACgACAAEAAADJ/xAACgACAAEAAADL/xAACgACAAEAAADM/xAACgACAAEAAADn/w8ACgACAAEAAADo/w8ACgACAAEAAADp/w8ACgABAAIAAADN/xAACgACAAEAAADO/xEACgACAAEAAADO/xAACgACAAEAAADP/xAACgACAAEAAADQ/xAACgACAAEAAADR/xAACgACAAEAAADS/xAACgACAAEAAADh/xAACgACAAEAAADi/xAACgACAAEAAADj/xAACgACAAEAAADk/xAACgACAAEAAADl/xAACgACAAEAAADm/xAACgACAAEAAADn/xAACgACAAEAAADo/xAACgACAAEAAADp/xAACgABAAIAAADg/xAACgACAAEAAADf/xAACgACAAEAAADe/xAACgACAAEAAADd/xAACgACAAEAAADc/xAACgACAAEAAADb/xAACgACAAEAAADP/xEACgACAAEAAADQ/xEACgACAAEAAADR/xEACgACAAEAAADS/xEACgACAAEAAADT/xEACgACAAEAAADU/xEACgACAAEAAADV/xEACgACAAEAAADW/xEACgACAAEAAADX/xEACgACAAEAAADY/xEACgACAAEAAADp/xEACgABAAIAAADo/xEACgACAAEAAADn/xEACgACAAEAAADm/xEACgACAAEAAADk/xEACgACAAEAAADl/xEACgACAAEAAADZ/xEACgACAAEAAADf/xEACgACAAEAAADg/xEACgACAAEAAADh/xEACgACAAEAAADi/xEACgACAAEAAADj/xEACgACAAEAAADN/xEACgACAAEAAADM/xEACgACAAEAAADL/xEACgACAAEAAADK/xEACgACAAEAAADJ/xEACgACAAEAAADI/xEACgACAAEAAADH/xEACgACAAEAAADF/xEACgAAAAEAAADG/xEACgACAAEAAADp/xIACgABAAIAAADp/xMACgABAAIAAADp/xQACgABAAIAAADp/xUACgABAAIAAADo/xUACgACAAEAAADn/xUACgACAAEAAADm/xUACgACAAEAAADl/xUACgACAAEAAADk/xUACgACAAEAAADj/xUACgACAAEAAADi/xUACgACAAEAAADh/xUACgACAAEAAADg/xUACgACAAEAAADf/xUACgACAAEAAADe/xUACgACAAEAAADd/xUACgACAAEAAADc/xUACgACAAEAAADb/xUACgACAAEAAADa/xUACgACAAEAAADZ/xUACgACAAEAAADY/xUACgACAAEAAADX/xUACgACAAEAAADW/xUACgACAAEAAADV/xUACgACAAEAAADU/xUACgACAAEAAADT/xUACgACAAEAAADS/xUACgACAAEAAADR/xUACgACAAEAAADQ/xUACgACAAEAAADP/xUACgACAAEAAADO/xUACgACAAEAAADN/xUACgACAAEAAADM/xUACgACAAEAAADL/xUACgACAAEAAADK/xUACgACAAEAAADJ/xUACgACAAEAAADI/xUACgACAAEAAADH/xUACgACAAEAAADG/xUACgACAAEAAADF/xUACgAAAAEAAADF/xQACgAAAAEAAADF/xMACgAAAAEAAADF/xIACgAAAAEAAADG/xIACgACAAEAAADH/xIACgACAAEAAADI/xIACgACAAEAAADJ/xIACgACAAEAAADK/xIACgACAAEAAADh/xIACgACAAEAAADi/xIACgACAAEAAADj/xIACgACAAEAAADk/xIACgACAAEAAADl/xIACgACAAEAAADm/xIACgACAAEAAADn/xIACgACAAEAAADo/xIACgACAAEAAADo/xMACgACAAEAAADo/xQACgACAAEAAADn/xQACgACAAEAAADm/xQACgACAAEAAADl/xQACgACAAEAAADk/xQACgACAAEAAADj/xMACgACAAEAAADi/xMACgACAAEAAADh/xMACgACAAEAAADg/xMACgACAAEAAADk/xMACgACAAEAAADl/xMACgACAAEAAADm/xMACgACAAEAAADn/xMACgACAAEAAADj/xQACgACAAEAAADi/xQACgACAAEAAADh/xQACgACAAEAAADg/xQACgACAAEAAADf/xQACgACAAEAAADf/xMACgACAAEAAADe/xMACgACAAEAAADd/xMACgACAAEAAADc/xMACgACAAEAAADb/xMACgACAAEAAADa/xMACgACAAEAAADZ/xMACgACAAEAAADg/xIACgACAAEAAADf/xIACgACAAEAAADe/xIACgACAAEAAADd/xIACgACAAEAAADc/xIACgACAAEAAADb/xIACgACAAEAAADa/xIACgACAAEAAADZ/xIACgACAAEAAADY/xIACgACAAEAAADX/xIACgACAAEAAADW/xIACgACAAEAAADV/xIACgACAAEAAADU/xIACgACAAEAAADT/xIACgACAAEAAADS/xIACgACAAEAAADR/xIACgACAAEAAADQ/xIACgACAAEAAADP/xIACgACAAEAAADO/xIACgACAAEAAADN/xIACgACAAEAAADM/xIACgACAAEAAADL/xIACgACAAEAAADI/xMACgACAAEAAADH/xMACgACAAEAAADG/xMACgACAAEAAADG/xQACgACAAEAAADH/xQACgACAAEAAADI/xQACgACAAEAAADJ/xQACgACAAEAAADK/xQACgACAAEAAADL/xQACgACAAEAAADM/xQACgACAAEAAADN/xQACgACAAEAAADO/xQACgACAAEAAADP/xQACgACAAEAAADQ/xQACgACAAEAAADR/xQACgACAAEAAADS/xQACgACAAEAAADT/xQACgACAAEAAADU/xQACgACAAEAAADV/xQACgACAAEAAADW/xQACgACAAEAAADX/xQACgACAAEAAADY/xQACgACAAEAAADZ/xQACgACAAEAAADa/xQACgACAAEAAADb/xQACgACAAEAAADc/xQACgACAAEAAADd/xQACgACAAEAAADe/xQACgACAAEAAADY/xMACgACAAEAAADX/xMACgACAAEAAADW/xMACgACAAEAAADV/xMACgACAAEAAADU/xMACgACAAEAAADT/xMACgACAAEAAADS/xMACgACAAEAAADR/xMACgACAAEAAADQ/xMACgACAAEAAADP/xMACgACAAEAAADO/xMACgACAAEAAADN/xMACgACAAEAAADM/xMACgACAAEAAADL/xMACgACAAEAAADK/xMACgACAAEAAADJ/xMACgACAAEAAAA=")
tile_set = SubResource("TileSet_8r63q")

[node name="ToughMap" type="TileMapLayer" parent="."]
position = Vector2(-125, -8)
tile_map_data = PackedByteArray("AADH/w0AAQABAAEAAADH/w4AAQAAAAEAAADH/w8AAQAAAAEAAADH/xAAAQAAAAEAAADH/xEAAQAAAAEAAADH/xIAAQAAAAEAAADH/xMAAQAAAAEAAADH/xQAAQAAAAEAAADH/xUAAQAAAAEAAAA=")
tile_set = SubResource("TileSet_qmbyq")

[node name="BackgroundLayer" parent="." instance=ExtResource("16_nj2p8")]
texture_cute = ExtResource("17_xtty0")
texture_tough = ExtResource("18_0xwpe")
texture_natural = ExtResource("19_j8mve")

[node name="InvisibleBarrier" parent="." instance=ExtResource("20_d37l0")]
position = Vector2(-3727, 581)
active_in_mode = 1

[node name="InvisibleBarrier2" parent="." instance=ExtResource("20_d37l0")]
position = Vector2(-3727, 583)
active_in_mode = 0

[node name="HUD" parent="." instance=ExtResource("22_fejxq")]

[node name="DeathScreen" parent="." instance=ExtResource("23_ejcpl")]

[node name="InvisibleBarrier3" parent="." instance=ExtResource("20_d37l0")]
position = Vector2(-1465, 641)
active_in_mode = 1

[node name="InvisibleBarrier4" parent="." instance=ExtResource("20_d37l0")]
position = Vector2(-1469, 647)
active_in_mode = 0
